--- a/ChinookMusic/WebApp/Pages/Shared/_Layout.cshtml
+++ b/ChinookMusic/WebApp/Pages/Shared/_Layout.cshtml
@@ -6,11 +6,13 @@
     <title>@ViewData["Title"]</title>
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
 
-
+    @*for holiday css*@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/holiday.css@0.9.8" />
-
+    @*for icons*@
+    <link rel="stylesheet" href="https://maxst.icon8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome-min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApp.styles.css" asp-append-version="true" />
+    @RenderSection("CustomCSS", required:false)
 </head>
 <body>
     <header>
@@ -39,10 +41,14 @@
                     <span>Samples</span>
                     <ul>
                         <li><a asp-area="" asp-page="/SamplePages/Index">Default SamplePages Home</a></li>
+                        <li><a asp-area="" asp-page="/SamplePages/Controls">Sample Form Controls</a></li>
+                        
                     </ul>
                 </li>
+                <li><a asp-area="" asp-page="/SamplePages/PlaylistManagement">OTLP</a></li>
                 <li>
                     <a asp-area="" asp-page="/Privacy">Privacy</a>
+                    
                 </li>
                     <partial name="_LoginPartial" />
             </ul>
