--- a/ChinookMusic/WebApp/Pages/Shared/_Layout.cshtml
+++ b/ChinookMusic/WebApp/Pages/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     <ul>
                         <li><a asp-area="" asp-page="/SamplePages/Index">Default SamplePages Home</a></li>
                         <li><a asp-area="" asp-page="/SamplePages/Controls">Sample Form Controls</a></li>
-                        
+                        <li><a asp-area="" asp-page="/SamplePages/ListtoList">List To List Demo</a></li>
                     </ul>
                 </li>
                 <li><a asp-area="" asp-page="/SamplePages/PlaylistManagement">OTLP</a></li>
