--- a/ChinookMusic/WebApp/Pages/Shared/_MyCustomCSS.cshtml
+++ b/ChinookMusic/WebApp/Pages/Shared/_MyCustomCSS.cshtml
@@ -45,4 +45,8 @@
         color: var(--danger-text-color);
         background-color: var(--danger-color);
     }
+    .danger:enabled:hover {
+        background-color: var(--danger-hover-color);
+        border-color: transparent;
+    }
 </style>
